--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -102,8 +102,9 @@ MENU LINKS
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: center;
+  /*justify-content: center;*/
   margin: 0 0 15px;
+  padding-left: var(--space-around-lg);
 }
 
 .menu-option-wrap .hover-link {
@@ -134,6 +135,12 @@ MENU LINKS
 
   .menu-options a {
     font-size: var(--font-large);
+    text-align: center;
+  }
+
+  .menu-option-wrap {
+    padding-left: 0;
+    justify-content: center;
   }
 
   .menu-option-wrap .hover-link:before {
